change some text

--- a/_posts/2015-2-24-ppt.md
+++ b/_posts/2015-2-24-ppt.md
@@ -54,7 +54,9 @@ categories: life
 
 下载地址：[num-ppt](http://walkginkgo.com/images/ppt/num-ppt.pptx)
 
-右键复制连接地址，然后用迅雷下载就行。我就不搞网盘或者上传到哪了。直接点击会进入jekyll的404报错界面。不用担心，你复制连接就好。
+直接点击下载地址。或者右键复制连接地址，然后用迅雷下载就行。我就不搞网盘或者上传到哪了。
+
+如果进入jekyll的404报错界面的话，你就复制连接。我的chrome自动识别了下载地址点击就能下载。
 
 还是那句话，不喜勿喷。
 欢迎留言。
