--- a/_posts/2015-3-22-ios-sumup-1.md
+++ b/_posts/2015-3-22-ios-sumup-1.md
@@ -8,16 +8,16 @@ categories: IOS
 
 今天这篇博客主要分两个部分。
 
->第一部分是对之前jekyll博客搭建中未解释清楚的地方重新解释一下。
+>第一部分是对之前Jekyll博客搭建中未解释清楚的地方重新解释一下。
 
 >第二部分是ios开发的一个总结和ios后期学习的一个安排。
 
-##第一部分 jekyll搭建博客中的问题解答##
+##第一部分 Jekyll搭建博客中的问题解答##
 ---
 
-因为好友许总最近在看我的博客然后进行jekyll环境的搭建遇到了一些问题。我在此做一个解答。
+因为好友许总最近在看我的博客然后进行Jekyll环境的搭建遇到了一些问题。我在此做一个解答。
 
-###第一个问题是用ruby gem下载jekyll时存在time out，及超时无法下载的情况。###
+###第一个问题是用ruby gem下载Jekyll时存在time out，及超时无法下载的情况。###
 
 这个问题主要是因为“ruby的软件源rubygems.org因为使用的亚马逊的云服务，所以被墙了”[（摘自唐巧的博客）](http://blog.devtang.com/blog/2014/05/25/use-cocoapod-to-manage-ios-lib-dependency/)
 
