--- a/_posts/2015-3-22-ios-sumup-1.md
+++ b/_posts/2015-3-22-ios-sumup-1.md
@@ -1,16 +1,16 @@
 ---
 layout: post
-title:  Jekyll问题解答和IOS开发小结Ⅰ
+title:  Jekyll问题解答和iOS开发小结Ⅰ
 date:   2015-03-22 11:39:16
-categories: IOS
+categories: iOS
 ---
-从这篇开始起，会写两到三篇ios方面的文章。可能是一些感受，可能是一些干货，欢迎你的阅读。
+从这篇开始起，会写两到三篇iOS方面的文章。可能是一些感受，可能是一些干货，欢迎你的阅读。
 
 今天这篇博客主要分两个部分。
 
 >第一部分是对之前Jekyll博客搭建中未解释清楚的地方重新解释一下。
 
->第二部分是ios开发的一个总结和ios后期学习的一个安排。
+>第二部分是iOS开发的一个总结和iOS后期学习的一个安排。
 
 ##第一部分 Jekyll搭建博客中的问题解答##
 ---
@@ -36,24 +36,24 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 
 >如果后面对我的博客里的一些东西不明白的可以直接留言，或者联系我我会把我的qq或者微信给你。
 
-##第二部分 ios开发小结Ⅰ##
+##第二部分 iOS开发小结Ⅰ##
 ---
 
-###Part Ⅰ ios开发总结###
+###Part Ⅰ iOS开发总结###
 
-说着讲着做ios开发也有快到半年了。从去年的九月份到现在的三月份，去了中间的寒假，差不多也就半年了。
+说着讲着做iOS开发也有快到半年了。从去年的九月份到现在的三月份，去了中间的寒假，差不多也就半年了。
 
 这半年来有苦也有乐，除了技术上的提升之外。更多的是收获了一群很好的亦师亦友的朋友。
 
-昨天迪哥和我说了一下之前代码里存在的思路和方法上的问题之后，他说我可以写几篇博客了。想想确实也该写写陪伴我那么久的ios开发了。
+昨天迪哥和我说了一下之前代码里存在的思路和方法上的问题之后，他说我可以写几篇博客了。想想确实也该写写陪伴我那么久的iOS开发了。
 
 首先谈一点个人的感受。
 
 因为我们的开发用了cocoapods做的程序的依赖管理。所以对于github的感受颇深。我之所以开始写博客，很大程度上是因为github这个”开源大社区“。我水平有限，不能很好的为这个大社区贡献我的issue或者发起一个大的项目。所以我现在决定开始写博客，来分享我在成长过程中的点点滴滴，希望我的分享可以帮到别人。
 
-可能我ios开发的目标就是有朝一日可以像巧大或者MJ那样可以开源一个或者几个start过百过千的项目。
+可能我iOS开发的目标就是有朝一日可以像巧大或者MJ那样可以开源一个或者几个start过百过千的项目。
 
-###下面是最近做项目过程中获得的一些东西。我会分块来叙述，因为ios这个系列会出不止一篇文章。所以这一篇现大概叙述。###
+###下面是最近做项目过程中获得的一些东西。我会分块来叙述，因为iOS这个系列会出不止一篇文章。所以这一篇现大概叙述。###
 
 **1. 对于面向对象的理解。**
 
@@ -103,7 +103,7 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 
 **6. 屏幕适配。**
 
-这一点对于ios开发者永远是一个头疼的问题。
+这一点对于iOS开发者永远是一个头疼的问题。
 
 因为后期我们可能采用纯代码开发，减少xib的使用。所以不对xib进行赘述。
 
@@ -121,7 +121,7 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 
 **8. 界面通信。**
 
-因为ios开发的时候经常需要界面传参，所以对于delegate或者block需要有一个更好的理解。
+因为iOS开发的时候经常需要界面传参，所以对于delegate或者block需要有一个更好的理解。
 
 **9. 命名。**
 
@@ -131,10 +131,10 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 >其他存在的问题我就留着自己消化不发出来了。因为后期的项目可能会采用很多其他的开源组件，会解决很多我现在开发存在的问题。包括json数据解析等等。会逐渐将这些问题和解决方法依次叙述出来。
 
 
-##Part Ⅱ ios开发后期学习安排##
+##Part Ⅱ iOS开发后期学习安排##
 现在对于什么是编程，怎么做开发有了大概的概念了，一个好的程序员得写十万行代码，我估计我现在也就千行出头没多少。
 
-**后期ios开发的学习安排大概集中于以下几点。**
+**后期iOS开发的学习安排大概集中于以下几点。**
 
 1.fmdb进行本地数据库的建立。这是寒假安排任务的时候就安排了的。
 
