fix some problem

--- a/_posts/2015-10-3-network.md
+++ b/_posts/2015-10-3-network.md
@@ -12,6 +12,8 @@ FOR CM AND PLUSUB
 
 我写这篇文章已经做好了被喷死吐槽死的准备了，因为我感觉我封装的太有问题了，但是又真的很想写一写，毕竟对我来说确实解决了一个大问题。
 
+另外:链接不知道为啥都不变色了😭基本上我都给链接了，就凑合一下吧...
+
 ##先简单的说说我们的网络请求转变过程
 
 加入工作室一年。一共做了有三四个项目了。我先大概叙述一下我们的网络请求的转变过程
@@ -62,7 +64,7 @@ Coding的网络请求自己看了。Coding是用block来进行回调的。至于
 
 下面来解释一下，首先第一个block是我们的主viewcontroller，也就是我们逻辑部分和视图部分。首先第一个block调Coding_NetAPIManager里的函数。然后在Coding_NetAPIManager再调CodingNetAPIClient里的函数。
 
-####(具体Coding代码请看[Coding客户端](https://coding.net/u/ease/p/Coding_iOS/git)代码的链接)
+###(具体Coding代码请看[Coding客户端](https://coding.net/u/ease/p/Coding_iOS/git)代码的链接)
 
 我们倒着来说。
 
