--- a/_posts/2015-10-4-ios-mvvm-11.md
+++ b/_posts/2015-10-4-ios-mvvm-11.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  iOS开发新框架MVVM 1理解开发模式(填坑)
+title:  iOS开发框架MVVM 1理解开发模式(填坑)
 date:   2015-10-5 10:37:00
 categories: iOS
 ---
 
 好了，我作大死的连续第五天奋斗在电脑跟前了，好的。
 
-接着上次写的[iOS开发新框架MVVM 1理解开发模式(占坑，未写完)](http://walkginkgo.com/ios/2015/05/04/ios-mvvm-1.html)来继续聊聊我们的MVVM。
+接着上次写的[iOS开发框架MVVM 1理解开发模式(占坑，未写完)](http://walkginkgo.com/ios/2015/05/04/ios-mvvm-1.html)来继续聊聊我们的MVVM。
 
 昨天聊了网络层的封装，今天聊聊开发模式，架构师应该干的事情。我一个编程界的新手也想聊聊，昨天说了要做高素质的流氓。今儿只是聊聊我对MVC和MVVM的感受和想法，具体的概述看我第一篇介绍。因为打字的时候就不会乱七八糟的想一些事情了。
 
