--- a/_posts/2015-5-3-ios-mvvm-1.md
+++ b/_posts/2015-5-3-ios-mvvm-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  iOS开发新框架MVVM 1理解开发模式(占坑，未写完)
+title:  iOS开发框架MVVM 1理解开发模式(占坑，未写完)
 date:   2015-05-03 22:04:12
 categories: IOS
 ---
