--- a/_posts/2015-12-12-ios-mvvm-2.md
+++ b/_posts/2015-12-12-ios-mvvm-2.md
@@ -82,7 +82,7 @@ self.pushBtn.rac_command = [[RACCommand alloc] initWithSignalBlock:^RACSignal *(
 
 我们还要实现这个代理。
 
-在ray中的教程和雷大神的[MVVMReactiveCocoa](https://github.com/leichunfeng/MVVMReactiveCocoa)都是新建了一个Impl文件，专门用来跳转，基本思路就是navigation本身就是一个堆栈，其实所有的vc都是在navigation其中的。我们只要控制这个这个最基本的navigation的跳转就可以了。
+在ray中的[教程](http://www.raywenderlich.com/74106/mvvm-tutorial-with-reactivecocoa-part-1)和雷大神的[MVVMReactiveCocoa](https://github.com/leichunfeng/MVVMReactiveCocoa)都是新建了一个Impl文件，专门用来跳转，基本思路就是navigation本身就是一个堆栈，其实所有的vc都是在navigation其中的。我们只要控制这个这个最基本的navigation的跳转就可以了。
 
 我们新建一个MVVMdemoImpl文件，里面有一个初始化的方法。
 
@@ -116,6 +116,17 @@ self.pushBtn.rac_command = [[RACCommand alloc] initWithSignalBlock:^RACSignal *(
 ## 小结
 其实上面的最后AppDelegate的赋值代理这一块还不是很明白。有时间再说说吧。好久没写博客就想发一篇了。
 
+以上完整代码在[MVVMdemo](https://github.com/judi0713/MVVMdemo)
+
+##参考链接##
+
+1.[leichunfeng/MVVMReactiveCocoa](https://github.com/leichunfeng/MVVMReactiveCocoa)
+
+2.[ReactiveCocoa Essentials: Understanding and Using RACCommand](http://codeblog.shape.dk/blog/2013/12/05/reactivecocoa-essentials-understanding-and-using-raccommand/)
+
+3.[Why Does RACCommand's block return a signal?](http://stackoverflow.com/questions/19440683/why-does-raccommands-block-return-a-signal)
+
+4.[MVVM Tutorial with ReactiveCocoa: Part 1/2](http://www.raywenderlich.com/74106/mvvm-tutorial-with-reactivecocoa-part-1)
 
 
 最后的最后，有些事情，我自己不愿去努力去争取我谁也不怪。有些事情我想的很明白我一点都不想想明白。
