--- a/_posts/2016-1-21-openwrt.md
+++ b/_posts/2016-1-21-openwrt.md
@@ -5,7 +5,7 @@ date:   2016-01-21 11:02
 categories: linux
 ---
 
-###慎哥开博客了，博客做的很好看！欢迎访问~[cbsfly](http://cbsfly.github.io)###
+###慎哥开博客了，博客做的很好看！欢迎访问~[cbsfly](http://cbsfly.github.io)
 
 > 请合理利用互联网，不要对国家安全造成任何威胁！
 
