--- a/_posts/2016-2-3-chrome.md
+++ b/_posts/2016-2-3-chrome.md
@@ -8,7 +8,7 @@ categories: free
 起因
 ---
 
-今天给帮同学配完surge，顺便安利了pocket，后来发现同学不会用..然后就想到我可以把我用到的chrome插件写一写。
+今天帮同学配完surge，顺便安利了pocket，后来发现同学不会用..然后就想到我可以把我用到的chrome插件写一写。
 
 正好最近也没写博客了，就当滥竽充数完成当初计划的每周一更的计划吧...
 
