--- a/_posts/2015-12-12-ios-mvvm-2.md
+++ b/_posts/2015-12-12-ios-mvvm-2.md
@@ -50,7 +50,7 @@ self.pushBtn.rac_command = [[RACCommand alloc] initWithSignalBlock:^RACSignal *(
 
 用第一种方法的原因呢，我们可以把点击事件赋值成为一个RACCommand类型的属性。既然可以变成一个属性了，那么就可以重新定义并且赋值。
 
-##分离点击事件
+## 分离点击事件
 我们新建一个FirstViewModel，在FirstViewModel.h中增加一个
 
 `@property (strong, nonatomic) RACCommand *excutePush;`
@@ -70,7 +70,7 @@ self.pushBtn.rac_command = [[RACCommand alloc] initWithSignalBlock:^RACSignal *(
 {% endhighlight %}
 这样，我们就实现了对点击事件的分离。
 
-##分离跳转
+## 分离跳转
 分离跳转，就要用到我开始说的代理了。
 我们做一个MVVMdemoService的代理，我放在Protocol文件夹里了。这个代理就声明了一个方法
 
@@ -118,7 +118,7 @@ self.pushBtn.rac_command = [[RACCommand alloc] initWithSignalBlock:^RACSignal *(
 
 以上完整代码在[MVVMdemo](https://github.com/judi0713/MVVMdemo)
 
-##参考链接##
+## 参考链接 
 
 1.[leichunfeng/MVVMReactiveCocoa](https://github.com/leichunfeng/MVVMReactiveCocoa)
 
