--- a/_posts/2015-4-20-ios-sumup-2.md
+++ b/_posts/2015-4-20-ios-sumup-2.md
@@ -4,11 +4,11 @@ title:  iOS近期开发小结Ⅱ
 date:   2015-04-20 17:16:24
 categories: iOS
 ---
->距离上次写博客有一段时间了。几次提笔想写都觉得没什么可写的，好玩的东西没倒腾，iOS又学的不彻底。最近把iOS又看了一段时间，而且基本上是把主要精力放在了iOS的基础知识学习上。这篇博客就写写在做最近这个app的时候一些小结。没有太多干货的东西。
+> 距离上次写博客有一段时间了。几次提笔想写都觉得没什么可写的，好玩的东西没倒腾，iOS又学的不彻底。最近把iOS又看了一段时间，而且基本上是把主要精力放在了iOS的基础知识学习上。这篇博客就写写在做最近这个app的时候一些小结。没有太多干货的东西。
 
 **因为最近钟徐琦智能搜索已经上线了各大安卓市场，我就想帮他上一个iOS版本然后借此机会熟悉一些iOS开发的新模式和一些新的开源组件。现在基本上算是完成了整个应用。也在近期准备上线了，有想法做出来之后开源出来，开源到我的github和coding。**
 
-###下面就是大概小结一下做这个应用的整个过程和最近看到的一些新的东西。###
+### 下面就是大概小结一下做这个应用的整个过程和最近看到的一些新的东西。
 ---
 
 > 1.网络层的分离
