--- a/_posts/2015-3-22-ios-sumup-1.md
+++ b/_posts/2015-3-22-ios-sumup-1.md
@@ -12,18 +12,18 @@ categories: iOS
 
 >第二部分是iOS开发的一个总结和iOS后期学习的一个安排。
 
-##第一部分 Jekyll搭建博客中的问题解答##
+## 第一部分 Jekyll搭建博客中的问题解答
 ---
 
 因为好友许总最近在看我的博客然后进行Jekyll环境的搭建遇到了一些问题。我在此做一个解答。
 
-###第一个问题是用ruby gem下载Jekyll时存在time out，及超时无法下载的情况。###
+### 第一个问题是用ruby gem下载Jekyll时存在time out，及超时无法下载的情况。
 
 这个问题主要是因为“ruby的软件源rubygems.org因为使用的亚马逊的云服务，所以被墙了”[（摘自唐巧的博客）](http://blog.devtang.com/blog/2014/05/25/use-cocoapod-to-manage-ios-lib-dependency/)
 
 所以我们只要在命令行下更换ruby的源就可以了。具体的点击巧大的博客进去看一下就可以了。
 
-###第二个问题是上传代码的问题。###
+### 第二个问题是上传代码的问题。
 [命令行git简单使用](http://walkginkgo.com/git/2015/03/07/git-easyuse.html)具体的操作可以参考这篇博客。另外解释一下这篇博客里少写的一些内容。
 
 git上传代码是需要你的身份的，所以下面两个命令是需要提前输入的。
@@ -36,7 +36,7 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 
 >如果后面对我的博客里的一些东西不明白的可以直接留言，或者联系我我会把我的qq或者微信给你。
 
-##第二部分 iOS开发小结Ⅰ##
+## 第二部分 iOS开发小结Ⅰ
 ---
 
 ###Part Ⅰ iOS开发总结###
@@ -53,7 +53,7 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 
 可能我iOS开发的目标就是有朝一日可以像巧大或者MJ那样可以开源一个或者几个start过百过千的项目。
 
-###下面是最近做项目过程中获得的一些东西。我会分块来叙述，因为iOS这个系列会出不止一篇文章。所以这一篇现大概叙述。###
+### 下面是最近做项目过程中获得的一些东西。我会分块来叙述，因为iOS这个系列会出不止一篇文章。所以这一篇现大概叙述。
 
 **1. 对于面向对象的理解。**
 
@@ -131,7 +131,7 @@ git上传代码时候首先要先git clone下来，比如clone下来的文件夹
 >其他存在的问题我就留着自己消化不发出来了。因为后期的项目可能会采用很多其他的开源组件，会解决很多我现在开发存在的问题。包括json数据解析等等。会逐渐将这些问题和解决方法依次叙述出来。
 
 
-##Part Ⅱ iOS开发后期学习安排##
+## Part Ⅱ iOS开发后期学习安排
 现在对于什么是编程，怎么做开发有了大概的概念了，一个好的程序员得写十万行代码，我估计我现在也就千行出头没多少。
 
 **后期iOS开发的学习安排大概集中于以下几点。**
