--- a/_posts/2016-2-6-sumup.md
+++ b/_posts/2016-2-6-sumup.md
@@ -1,76 +1,86 @@
 ---
 layout: post
-title:  大二下学期总结和后期计划
+title:  大三上+我的2016年总结
 date:   2016-2-6
 categories: life
 ---
 
 > 前几天就写好了一直没发。
 
-以后每学期都要写。
+> 这是一篇很水的博客。仅写给自己。
 
-先聊聊最近的生活吧。结束了北京的实践活动回到家，这次的寒假不是很想写代码，休息一下，早点回学校再写吧，欠的项目太多，一时半会不想写。打总就休息一下回去再干了。
+还有几天，我这总结的博客拖了又拖到现在才开始写。
 
-不过最近无聊的准备继续开始写代码了。
+不废话开始总结
+---
 
-感冒了，唯一的症状是鼻子不通气。
+### 大三上
 
-开始正题吧废话差不多了。
+这学期写了9篇博客。iOS方面3篇，感想2篇，杂七杂八的倒腾2篇。
 
-*大二下的学期总结*
+看了3本还是4本书...我来想想，看了知乎的选集，创业时我们在聊什么，于丹的最美古诗词，黑客与画家，翻了大秦帝国的某半本，围城半本。好像还一本，记不得了，这点很不错。
 
-我的大二下，依旧单身。总算算是开始新的生活，开始看上新的姑娘开始往前看了。什么，哪个姑娘？看上的姑娘比较多你说哪一个？不过可以比较淡定的面对过去的人了。以前会想，以后有钱了会有妹子看上我。现在会想，妹子到时候看上的是我的人还是我的钱？大学的妹子才是真爱。不过大学的妹子会看脸吧…好心酸。
+出去玩了2次。感谢姜导和姜嫂。也感谢瑶姐。让我索然无味的写代码生活多了一点其他的颜色。
 
-技术上，其实说实话没啥大的突破。iOS开发总算是会了数据库，然后把block看了一下写了一篇关于block的博客。在项目也开始逐步的使用RAC，mvvm模式比我想象中要难的多。唯一值得庆幸的是我上线了一个独立开发的app，在app store，下载量是2，我一个人下载了一次，班长下载了一次，我让班长下的。不过无所谓了...至少是我独立上线的一个应用。
+这学期出去吃了N多次，不过也算是平常辛苦的犒劳吧。
 
-其他技术上的，计算机网络学的就考了六十多...学数据库的意义就在于我没有理由在开发的时候不写sql语句了…到现在就会一个create table和select from where，不是select语句。其他就没啥了。
+日记写了一学期的，这点也很满意。
 
-大二下特别充实，自从姜导周末去找嫂子我们周末打球计划挂了之后我就改到晚上打球了。白天早起看看英语，上课，没课就去工作室，晚上回寝室九点多，去操场打球，十点，然后上上网，做做仰卧起坐偶尔写写代码，洗澡的时候找光哥熊熊还有班长闲扯闲扯，偶尔找找情圣。这一天就过去了。
+这学期买正版软件买了大好几百的样子。现在开始逐渐的支持正版，即使是office这种，我都淘宝买账号，又不贵，还省去了破解的麻烦。
 
-学习上，总体来说，比较满意。我的G点终于到3.0了。。累死我了。好好学习绝对是大学最难的事情。我在逐步的改变，这学期至少没有上课睡觉了，这点已经进步了，而且每门课都会听一点，除了密码学和信息论。其他都听了。不过这两门课最后复习的都还好。
+工作室项目做了一个，那个坑一样的项目。不过基本上算是摆脱外包生活了。可以没有钱，但不能让外包影响心情。
 
-最大的进步是开始坚持做一些事情，不找理由。比如我坚持做仰卧起坐，看开发的资讯，还有记日记。
+自己还做了一个，正在上线过程中。敬请期待。不过不出意外的话，下学期要上线了。
 
-其他，其他没啥了，有如意的地方，有不如意的地方。发生了很多事情，也结束了很多事情。一学期不可能总一帆风顺，也会有迷茫啥的，不过很幸运我在学期刚开始的时候把这些问题都解决了。
+依旧坚持了锻炼，除了中间有段时间脖子疼，其他时间基本每天都有锻炼，初期是平板支撑加俯卧撑，后面加了打球，到最后面是跑步，最近都有在跑，欢迎各位后面约跑。总之一直都在锻炼，瘦了10斤，但是确实感觉到胳膊和肚子上逐渐都有了肌肉的痕迹。
 
-去了一趟北京让我又想明白很多事情，也让我成长了不少，这可能是后话了。
+期末的时候换了手机，为了省钱只换了5s。
 
-给这学期总体打85分，我真的很满意这学期。技术上打分80，平平稳稳，按部就班，这事需要一个时间沉淀。生活和成长，90。确实学到了很多除了技术上之外的东西，开始固执，开始偏激，不过我不觉得这是坏事。我也在逐渐的接触更多的东西。成长，不只是写代码。即使写代码很重要。
+学习上，学校那些专业课开的，我简直了。很多东西都过时了！！什么年代了还用这个那个的软件。行不行啊？汇编软工计网编程好评，其他都差评。
 
-*后期计划*
+这学期觉得听的最爽的课是毛概。我很认真的。
 
-后期的计划。必须要完成的。
+这学期，申请入党了。考试也过了，到现在不通知我。党是不是不愿意吸收我。
 
-- 多读书，要在坚持的列表加上一个读书。除了技术上的书还要读其他的书。
-- 多和别人交流。读书确实很重要，但是与人交流会能得到对你更客观的评价。
+技术上，总算是摆脱了瓶颈期。看了yy大神的采访稿才知道后面应该怎么做，技术人，还是要多看源码。
 
-前两个好像每学期都是这样。。都做不到。
+当然，技术上还学了很多其他的东西，这点我还是挺满意的，比如倒腾各种东西的时间越来越快。也开始逐渐接触一些更高端的东西。
 
-技术上写具体一点吧，因为都是细节上的。
+最近也在开始逐渐的了解整个互联网的生态环境，更加全方位的发展。主要是体验产品和对产品的理解上，都在刻意的带着训练自己。
 
-- 继续我的MVVM模式的研究，然后出文档，出demo。
-- 规范后面的项目开发。包括整理完善的开发目录，形成文档给创萌工作室。
-- 尝试阅读源码，比如MJ的extension还有refresh，这是可以尝试去模仿写的。还有RAC的源码。这是为了可以更好的使用的。还有一些开源的项目，比如coding等等。
-- 时间允许的话，上线一个自己独立完成的app，到app store。
-- 学习swift。同时对oc的一些内部机制深入理解，比如assign和weak，比如runtime，还有oc如何转换为c的struct。对照一些面试题然后更详细的在
-- 复习c语言和数据结构，像block到最后就是c的函数指针。
-- 学习其他的语言，我想尝试ruby on rails。haskell是我的业余爱好。
-- 学好专业课。这学期的专业课总体情况还行，下学期继续这样就可以了。
-- 坚持学英语。为了写代码也为了以后考虑出国。
+依旧是抄了一学期的作业。不过已经进步了，有些能自己写的都自己写了，不想写的都抄了，大部分都不想写。我没写作业的时间都用来写代码了。很多课也开始逐渐的变得自己靠自己，而不是靠别人。这是我很感到进步的一点。
 
-生活和其他方面
+这学期最大的事情算是接手工作室吧。但这是后话。
 
-- 考虑考虑找个女朋友？个子比我矮，长得不丑，不要好看的。能理解我偶尔的繁忙。
-- 继续坚持做一些事情，坚持100天。
-- 坚持锻炼，打球。什么时候单手虐姜导了什么时候就不打了。
-- 下学期要多拍照，大学过一半了，再不拍照就没了。
-- 没事出去走走玩玩，不能总窝在电脑跟前。也不能长时间写代码。
-- 吃好喝好多睡觉。
-- 好好学习，争取下学期G点能到3.5，我再重修点课就差不多了。
-- 制定每天的计划，认真完成。
-- 多出去和别的班人接触接触，信安计科是一家。
-- 需要把以后出国还是工作这事提到日程了。
+重修刷分，是这学期最失败的一件事情。不过也是好事，我算是彻底打消了出国的想法。后面可以安心的准备考研或者工作。
 
-差不多就这些了。想到再补充了。
+这学期除了自己变懒了，很多计划还是没有做成，看了太多直播。而且确实，有些专业课还是要看一看的。晚睡拖延症越发严重。这是不好的。
 
-和大二说声再见，和大三说声你好。
+感觉这学期其实特要感谢以及表扬一个人，慎哥。比较努力，跟我学iOS也很辛苦，干了很多搬砖的事情，但是确实很认真。也没事指导我穿衣打扮，在此，特意感谢以及表扬。
+
+其他人，感谢起来就太多了。不一一说了。你们都知道我是爱你们的。
+
+这学期用我挺哥的话说，除了XX，都完美了，那两个字请自行脑补。我实在是不堪回首。要好好学习了啊。
+
+哦，对了，很严肃的话题。这学期依旧单身。即使觉得有姑娘不错。但是依旧单身。
+
+自从回168韦老师和我说，不要着急，不能凑合，不能放低标准。我现在很淡定，以后我们就是高级工程师，公司CTO。姑娘们看着办。
+
+这学期也想明白很多事情，比如钱和情怀。还有没想明白的，依旧纠结的考研和工作。
+
+打个分，75吧，原计划，85的，真的。要不是是吧，就85了。
+
+### 2016年终总结
+博客写了26篇。
+
+单身。
+
+技术上越发成熟。
+
+又一年了。
+
+其实这一年没啥好总结的。学习就那样，技术上也就那样。
+
+真的发自内心的感谢信安一班。你们又陪我度过了一年。这一年，和我在一起时间最长的就是你们。打球也好上课也好写代码也好。总有很多欢乐。
+
+不能提名字，提名字就写不完了。各种感谢！深鞠躬！爱你们！
