--- a/_posts/2016-6-23-SwiftT.md
+++ b/_posts/2016-6-23-SwiftT.md
@@ -129,7 +129,7 @@ T沙龙真的是要把热爱Swift的人聚集在一起，分享，交流。
 
 Swift值得所有人去学习，这门新兴的语言，必将走上历史的顶峰。此处必须表达一下我对某门语言的态度。后台迟早都是Swift，安卓迟早也是Swift。对我就是想说，那门可以干这两件事情的语言，你迟早gg。
 
-**我相信，<T>沙龙在成都会越来越好的。**
+**我相信，&lt;T&gt;沙龙在成都会越来越好的。**
 
 ## 感谢
 
