--- a/_posts/2018-5-21-ffmpeg.md
+++ b/_posts/2018-5-21-ffmpeg.md
@@ -1,4 +1,9 @@
-# Mac 下压制字幕和 logo（不定期补充 ffmpeg 压制方案）
+---
+layout: post
+title:  Mac 下压制字幕和 logo（不定期补充 ffmpeg 压制方案）
+date:   2018-5-14
+categories: miniprogram
+---
 
 这篇博客要感谢蒸包同志！没有蒸包同志的教学就没有这篇博客的输出。以及，我尽量写的白话文。以及如果需求大我会开发 Mac 可视化版本的压制软件...这是后话。
 
