--- a/_posts/2018-5-21-ffmpeg.md
+++ b/_posts/2018-5-21-ffmpeg.md
@@ -44,15 +44,15 @@ categories: ffmpeg
 
 ## 使用
 
-使用方案，需要用哪一个方法，就把最前面的 # 号去掉。
+使用方案，需要用哪一个方法，就把最前面的 # 号去掉。中文那行不能注释。以及记得把视频 ass 还有 logo 的图都和那个黑色的 ffmpeg 放在一起。下文有详细图。
 
-我在 render.sh 里定义了几个方法。
+render.sh 里定义了几个方法。
 
 1. 转换视频格式
 
-把 in 改成你的视频名字，out 改成输出的视频名称即可。把视频和那个黑色的 ffmpeg 放在一起，下文压制字幕有详细截图。
+把 in 改成你的视频名字，out 改成输出的视频名称即可。
 
-比如我想把 wake.mp4 换成 mkv。就写一句。
+比如我想把 wake.mp4 换成 mkv。就改为。
 
 `./ffmpeg -i "wake1.mp4" wake.mkv`
 
@@ -66,7 +66,7 @@ categories: ffmpeg
 
 把 in.mp4 换成你的 mp4
 
-把 xx.srt 换成你的 srt 文件
+把 xx.srt 换成你的 ass 文件
 
 out.mp4 换成你需要的名字。如下图。
 
@@ -76,8 +76,9 @@ out.mp4 换成你需要的名字。如下图。
 
 ![ffmpeg-9](http://walkginkgo.com/images/ffmpeg/9.png)
 
-
 4. 压制带 logo 的（logo 在上 ass 字幕在下）
+
+这里的 logo 在上 ass 在下，是指如果 logo 和滚轴重复在一起，哪一个在上面。下文有反着的。
 
 ![ffmpeg-10](http://walkginkgo.com/images/ffmpeg/10.png)
 
