--- a/_posts/2018-5-21-ffmpeg.md
+++ b/_posts/2018-5-21-ffmpeg.md
@@ -7,7 +7,7 @@ categories: ffmpeg
 
 > 本文将不定期补充 ffmpeg 其余压制方案或者命令行使用方法
 
-**如果有在 Mac 下压制视频需求的话，可以直接在 Mac App Store 搜索 [PineconeSuppress](https://apps.apple.com/cn/app/pineconesuppress/id1398134175?l=en&mt=12)。我将 ffmpeg 进行了可视化的封装，可以更加轻松的在 Mac 下压制字幕哦~**
+**如果有在 Mac 下合成视频和字幕需求的话，可以直接在 Mac App Store 搜索 [PineconeSuppress](https://apps.apple.com/cn/app/pineconesuppress/id1398134175?l=en&mt=12)。我将 ffmpeg 进行了可视化的封装，可以更加轻松的在 Mac 下压制字幕哦~**
 
 这篇博客要感谢蒸包同志！没有蒸包同志的教学就没有这篇博客的输出。以及，要说难确实也有点难度，要说不难，我真的很努力写的白话文加配图了。以及如果需求大我会开发 Mac 可视化版本的压制软件...这是后话。
 
