--- a/_posts/2019-12-4-uranus.md
+++ b/_posts/2019-12-4-uranus.md
@@ -21,6 +21,10 @@ Uranus 是我做的第一款尝试收费的软件。它的主要功能是在 Mac
 
 Uranus 实际上可以拆解成两个部分。下载部分，素材管理部分。实际上可以单独拆开，原计划只有下载功能，但是 App Store 不给上架。再加上和朋友聊了下，如果可以管理下载好的素材不是很好吗。然后就想着把完成度做高点，加上了素材管理。至少对于我个人来说，我希望这个软件可以实现的是把 Instagram 作为一个灵感库，所以素材管理也很重要。主要这样也显的高端一点。
 
+下载功能上支持复制 Instagram 网址进行自动下载，也支持手动下载（可以设置快捷键）。下载类型支持普通的时间线，highlights 和 story，图像和视频都支持。
+
+素材管理上，支持提取普通时间线的文字选择和复制，以及图片的主色调复制，支持批量选中后复制和导出。支持删除功能。
+
 ## 价格的问题
 
 Mac 上下载 Instagram，一想就是个小到不能再小的需求。所以我和朋友说，如果这个软件能给我带来 1000 元的收入，我就满足了...比较了一下市面上的软件，比较的软件很多，比如大名鼎鼎的 Eagle，Flume，Grids，我觉得我 6.99 美元 1 个激活码真的不贵。至于价格的问题，这只是我的第一次尝试。我暂时不会放弃独立开发这条路的。
